# connectors-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_REPOSITORY_PLAN.md  IMPLEMENTATION_SUMMARY.md  PEREGRINE_INTEGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  TECHNICAL_STATUS.md  fedmcp-implementation-guide.md  fedmcp-oss-completion.md
.github/workflows/: release.yml  test.yml
cli/: go.mod
connectors-sdk/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
connectors-sdk/docs/: getting-started.md
connectors-sdk/examples/filesystem_connector/: connector.py
connectors-sdk/examples/mock_hr_connector/: README.md  requirements.txt  tool.schema.json
connectors-sdk/examples/rest_api_connector/: connector.py
connectors-sdk/fedmcp_connector/: __init__.py  base.py
connectors-sdk/fmcpx/: __main__.py  cli.py
connectors-sdk/fmcpx/templates/basic/: .env.example  README.md  connector.py  requirements.txt
core/python/: .gitignore  README.md  setup.py
core/typescript/: .gitignore  README.md  package.json  tsconfig.json
examples/healthcare/: README.md  audit_trail_example.json  clinical_decision_support.json  population_health_analysis.json
examples/quickstart/: README.md  docker-compose.yml  quickstart.py  quickstart.sh
fedmcp-connect/foundry_conn/: foundry.py  requirements.txt
fedmcp-ui/: package.json  pnpm-lock.yaml  tailwind.config.js
private-connectors/: README.md
scripts/: README.md  migrate-to-multi-repo.sh  pre-push-check.sh  prepare-public-release.sh  prepare-ui-release.sh
spec/spec/: mcp-fed.schema.json  (+1 more)
(+47 files in other folders)
